<resources>
    <string name="app_name">Genie</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="login_content_description">GENIE</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="e_mail">E-mail</string>
    <string name="password_sign_up">Password</string>
    <string name="name_sign_up">Name</string>
    <string name="e_mail_sign_up">E-mail</string>
    <string name="submit">Submit</string>
    <string name="current_location">Current Location</string>
    <string name="get_location">Get Location</string>
</resources>