<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp">

    <TextView
        android:id="@+id/sign_up_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/sign_up"
        android:textSize="70sp"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/name_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_up_text"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/name_sign_up"
        android:minWidth="250dp"
        android:minHeight="48dp"
        android:autofillHints="name"
        android:inputType="text" />

    <EditText
        android:id="@+id/email_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_sign_up"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/e_mail_sign_up"
        android:minWidth="250dp"
        android:minHeight="48dp"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_sign_up"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/password_sign_up"
        android:minWidth="250dp"
        android:minHeight="48dp"
        android:autofillHints="password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/get_location_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_sign_up"
        android:layout_alignStart="@+id/password_sign_up"
        android:layout_marginTop="8dp"
        android:minWidth="170dp"
        android:minHeight="48dp"
        android:hint="@string/current_location"
        android:autofillHints="postalAddress"
        android:inputType="textPostalAddress" />

    <Button
        android:id="@+id/get_location_btn"
        android:layout_width="wrap_content"
        android:maxWidth="120dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/get_location_sign_up"
        android:layout_below="@+id/password_sign_up"
        android:text="@string/get_location" />

    <Button
        android:id="@+id/submit_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/get_location_sign_up"
        android:layout_marginTop="100dp"
        android:minWidth="150dp"
        android:text="@string/submit"
        android:textAllCaps="true" />

</RelativeLayout>