<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/loginImageView"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        tools:srcCompat="@tools:sample/avatars"
        tools:src="![](../drawable/GenieLogo.png)"
        android:contentDescription="@string/login_content_description" />

    <EditText
        android:id="@+id/username_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:minWidth="200dp"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/loginImageView"
        android:hint="@string/username"
        android:inputType="text"
        android:autofillHints="" />

    <EditText
        android:id="@+id/password_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_edittext"
        android:layout_marginTop="8dp"
        android:minHeight="48dp"
        android:minWidth="200dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_edittext"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:text="@string/log_in" />

</RelativeLayout>
